[IMP] generic: make missing translatable terms translatable
In this commit, we have addressed a crucial issue related to
translation. We discovered that certain key
terms in our application were not properly marked for
translation, resulting in a lack of support for different
languages. To rectify this, we have implemented the necessary
changes to make these terms translatable. By doing so, we have
successfully resolved the language compatibility problem and
improved the overall internationalization of our application.
This commit ensures that all terms, previously overlooked or
untranslatable, are now fully accessible for translation,
enhancing the localization experience for our users across the globe.

task:3358438

--- a/addons/analytic/i18n/analytic.pot
+++ b/addons/analytic/i18n/analytic.pot
@@ -399,6 +399,11 @@ msgid "Delta PC"
 msgstr ""
 
 #. module: analytic
+#: code:addons/analytic/static/src/components/analytic_distribution/analytic_distribution.xml:0
+msgid "Search Analytic Account"
+msgstr ""
+
+#. module: analytic
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_line__name
 #: model:ir.model.fields,field_description:analytic.field_account_analytic_plan__description
 msgid "Description"
