--- a/addons/lunch/i18n/lunch.pot
+++ b/addons/lunch/i18n/lunch.pot
@@ -558,6 +558,13 @@ msgid "Configure Your Order"
 msgstr ""
 
 #. module: lunch
+#. odoo-python
+#: code:addons/lunch/models/lunch_supplier.py:0
+#, python-format
+msgid "Cannot send an email to this supplier"
+msgstr ""
+
+#. module: lunch
 #: model_terms:ir.ui.view,arch_db:lunch.lunch_order_view_tree
 msgid "Confirm"
 msgstr ""
