--- a/addons/mail/i18n/mail.pot
+++ b/addons/mail/i18n/mail.pot
@@ -9121,6 +9121,16 @@ msgid "This user can not be added in this channel"
 msgstr ""
 
 #. module: mail
+#: model:discuss.channel,name:mail.channel_all_employees
+msgid "general"
+msgstr ""
+
+#. module: mail
+#: model:discuss.channel,description:mail.channel_all_employees
+msgid "General announcements for all employees."
+msgstr ""
+
+#. module: mail
 #: model_terms:ir.ui.view,arch_db:mail.view_mail_search
 msgid "Thread"
 msgstr ""
