--- a/addons/mrp/i18n/mrp.pot
+++ b/addons/mrp/i18n/mrp.pot
@@ -81,6 +81,41 @@ msgid "%i work orders"
 msgstr ""
 
 #. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Material Availability"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Equipment Failure"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Setup and Adjustments"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Reduced Speed"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Process Defect"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Reduced Yield"
+msgstr ""
+
+#. module: mrp
+#: code:addons/mrp/data/mrp_data.xml:0
+msgid "Fully Productive Time"
+msgstr ""
+
+#. module: mrp
 #. odoo-python
 #: code:addons/mrp/models/mrp_bom.py:0
 #, python-format
