--- a/addons/payment_alipay/i18n/payment_alipay.pot
+++ b/addons/payment_alipay/i18n/payment_alipay.pot
@@ -110,3 +110,14 @@ msgstr ""
 #, python-format
 msgid "received invalid transaction status: %s"
 msgstr ""
+
+#. module: payment_alipay
+#: code:addons/payment_alipay/views/payment_provider_views.xml:0
+msgid ""
+"<div class=\"alert alert-danger\""
+"            role=\"alert\""
+"            attrs=\"{'invisible': [('code', '!=', 'alipay')]}\">"
+"            This provider is deprecated."
+"            Consider disabling it and moving to <strong>Asiapay</strong>."
+"        </div>"
+msgstr ""
