--- a/addons/payment_ogone/i18n/payment_ogone.pot
+++ b/addons/payment_ogone/i18n/payment_ogone.pot
@@ -133,3 +133,14 @@ msgstr ""
 #, python-format
 msgid "The transaction is not linked to a token."
 msgstr ""
+
+#. module: payment_ogone
+#: code:addons/payment_ogone/views/payment_provider_views.xml:0
+msgid ""
+"<div class=\"alert alert-danger\""
+"            role=\"alert\""
+"            attrs=\"{'invisible': [('code', '!=', 'ogone')]}\"> "
+"            This provider is deprecated."
+"            Consider disabling it and moving to <strong>Stripe</strong>."
+"        </div>"
+msgstr ""
