--- a/addons/payment_payumoney/i18n/payment_payumoney.pot
+++ b/addons/payment_payumoney/i18n/payment_payumoney.pot
@@ -78,3 +78,27 @@ msgstr ""
 #, python-format
 msgid "The payment encountered an error with code %s"
 msgstr ""
+
+#. module: payment_payumoney
+#. odoo-python
+#: code:addons/payment_payumoney/views/payment_provider_views.xml:0
+msgid ""
+"<div class=\"alert alert-danger\""
+"            role=\"alert\""
+"            attrs=\"{'invisible': [('code', '!=', 'payumoney')]}\">"
+"            This provider is deprecated."
+"            Consider disabling it and moving to <strong>Razorpay</strong>."
+"        </div>"
+msgstr ""
+
+#. module: payment_payumoney
+#. odoo-python
+#: code:addons/payment_payumoney/views/payment_provider_views.xml:0
+msgid ""
+"<div class=\"alert alert-danger\""
+"           role=\"alert\""
+"           attrs=\"{'invisible': [('code', '!=', 'payumoney')]}\">"
+"           This provider is deprecated."
+"           Consider disabling it and moving to <strong>Mercado Pago</strong>."
+"       </div>"
+msgstr ""
