--- a/odoo/addons/base/i18n/base.pot
+++ b/odoo/addons/base/i18n/base.pot
@@ -280,6 +280,34 @@ msgid ""
 msgstr ""
 
 #. module: base
+#. odoo-python
+#: code:addons/base/models/res_config.py:0
+#, python-format
+msgid "Configuration items need to implement execute"
+msgstr ""
+
+#. module: base
+#. odoo-python
+#: code:addons/base/models/ir_qweb.py:0
+#, python-format
+msgid "Lambda default values are not supported"
+msgstr ""
+
+#. module: base
+#. odoo-python
+#: code:addons/base/models/ir_qweb.py:0
+#, python-format
+msgid "This lambda code style is not implemented."
+msgstr ""
+
+#. module: base
+#. odoo-python
+#: code:addons/base/models/ir_qweb.py:0
+#, python-format
+msgid "This loop code style is not implemented."
+msgstr ""
+
+#. module: base
 #: model:ir.module.module,description:base.module_pos_sale
 msgid ""
 "\n"
