--- a/addons/l10n_it_edi/i18n/l10n_it_edi.pot
+++ b/addons/l10n_it_edi/i18n/l10n_it_edi.pot
@@ -100,14 +100,6 @@ msgid ""
 msgstr ""
 
 #. module: l10n_it_edi
-#: model_terms:ir.ui.view,arch_db:l10n_it_edi.account_move_send_inherit_l10n_it_edi
-msgid ""
-"<span attrs=\"{'invisible': [('l10n_it_edi_warning_message', '=', False)]}\">\n"
-"                        <b>Tax Agency (Italy)</b>\n"
-"                    </span>"
-msgstr ""
-
-#. module: l10n_it_edi
 #: model_terms:ir.ui.view,arch_db:l10n_it_edi.res_config_settings_view_form
 msgid ""
 "<span class=\"o_form_label\">\n"
@@ -122,13 +114,16 @@ msgid "<span class=\"o_form_label\">Allow Odoo to process invoices</span>"
 msgstr ""
 
 #. module: l10n_it_edi
-#: model_terms:ir.ui.view,arch_db:l10n_it_edi.res_config_settings_view_form
-msgid "A Demo service is in use."
+#: model_terms:ir.ui.view,arch_db:l10n_it_edi.account_move_send_inherit_l10n_it_edi
+msgid ""
+"<span invisible=\"not l10n_it_edi_warning_message\">\n"
+"                        <b>Tax Agency (Italy)</b>\n"
+"                    </span>"
 msgstr ""
 
 #. module: l10n_it_edi
-#: model:ir.model,name:l10n_it_edi.model_account_chart_template
-msgid "Account Chart Template"
+#: model_terms:ir.ui.view,arch_db:l10n_it_edi.res_config_settings_view_form
+msgid "A Demo service is in use."
 msgstr ""
 
 #. module: l10n_it_edi
@@ -1177,7 +1172,7 @@ msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n2_2
-msgid "[N2.2] Non soggette – altri casi"
+msgid "[N2.2] Non soggette - altri casi"
 msgstr ""
 
 #. module: l10n_it_edi
@@ -1187,34 +1182,34 @@ msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_1
-msgid "[N3.1] Non imponibili – esportazioni"
+msgid "[N3.1] Non imponibili - esportazioni"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_2
-msgid "[N3.2] Non imponibili – cessioni intracomunitarie"
+msgid "[N3.2] Non imponibili - cessioni intracomunitarie"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_3
-msgid "[N3.3] Non imponibili – cessioni verso San Marino"
+msgid "[N3.3] Non imponibili - cessioni verso San Marino"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_4
 msgid ""
-"[N3.4] Non imponibili – operazioni assimilate alle cessioni all’esportazione"
+"[N3.4] Non imponibili - operazioni assimilate alle cessioni all'esportazione"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_5
-msgid "[N3.5] Non imponibili – a seguito di dichiarazioni d’intento"
+msgid "[N3.5] Non imponibili - a seguito di dichiarazioni d'intento"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n3_6
 msgid ""
-"[N3.6] Non imponibili – altre operazioni che non concorrono alla formazione "
+"[N3.6] Non imponibili - altre operazioni che non concorrono alla formazione "
 "del plafond"
 msgstr ""
 
@@ -1236,49 +1231,49 @@ msgstr ""
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_1
 msgid ""
-"[N6.1] Inversione contabile – cessione di rottami e altri materiali di "
+"[N6.1] Inversione contabile - cessione di rottami e altri materiali di "
 "recupero"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_2
-msgid "[N6.2] Inversione contabile – cessione di oro e argento puro"
+msgid "[N6.2] Inversione contabile - cessione di oro e argento puro"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_3
-msgid "[N6.3] Inversione contabile – subappalto nel settore edile"
+msgid "[N6.3] Inversione contabile - subappalto nel settore edile"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_4
-msgid "[N6.4] Inversione contabile – cessione di fabbricati"
+msgid "[N6.4] Inversione contabile - cessione di fabbricati"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_5
-msgid "[N6.5] Inversione contabile – cessione di telefoni cellulari"
+msgid "[N6.5] Inversione contabile - cessione di telefoni cellulari"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_6
-msgid "[N6.6] Inversione contabile – cessione di prodotti elettronici"
+msgid "[N6.6] Inversione contabile - cessione di prodotti elettronici"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_7
 msgid ""
-"[N6.7] Inversione contabile – prestazioni comparto edile esettori connessi"
+"[N6.7] Inversione contabile - prestazioni comparto edile esettori connessi"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_8
-msgid "[N6.8] Inversione contabile – operazioni settore energetico"
+msgid "[N6.8] Inversione contabile - operazioni settore energetico"
 msgstr ""
 
 #. module: l10n_it_edi
 #: model:ir.model.fields.selection,name:l10n_it_edi.selection__account_tax__l10n_it_kind_exoneration__n6_9
-msgid "[N6.9] Inversione contabile – altri casi"
+msgid "[N6.9] Inversione contabile - altri casi"
 msgstr ""
 
 #. module: l10n_it_edi
