--- a/odoo/addons/test_translation_import/i18n/test_translation_import.pot
+++ b/odoo/addons/test_translation_import/i18n/test_translation_import.pot
@@ -3,10 +3,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0+e\n"
+"Project-Id-Version: Odoo Server 16.5alpha1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-10 17:44+0000\n"
-"PO-Revision-Date: 2022-11-10 17:44+0000\n"
+"POT-Creation-Date: 2023-09-27 07:44+0000\n"
+"PO-Revision-Date: 2023-09-27 07:44+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -82,11 +82,6 @@ msgstr ""
 #. module: test_translation_import
 #: model_terms:test.translation.import.model1,xml:test_translation_import.test_translation_import_model1_record1
 msgid "Knife"
-msgstr ""
-
-#. module: test_translation_import
-#: model:ir.model.fields,field_description:test_translation_import.field_test_translation_import_model1____last_update
-msgid "Last Modified on"
 msgstr ""
 
 #. module: test_translation_import
@@ -235,11 +230,20 @@ msgid "link label"
 msgstr ""
 
 #. module: test_translation_import
-#. odoo-javascript
 #. odoo-python
+#. odoo-javascript
 #: code:addons/test_translation_import/models/models.py:0
 #: code:addons/test_translation_import/static/src/xml/js_templates.xml:0
+#: code:addons/test_translation_import/static/src/xml/js_templates.xml:0
 #, python-format
+msgid "slot"
+msgstr ""
+
+#. module: test_translation_import
+#. odoo-python
+#: code:addons/test_translation_import/models/models.py:0
+#, python-format
+msgctxt "for context code translation"
 msgid "slot"
 msgstr ""
 
