[FIX] mail: filter models with no mail thread
When user schedules a message and `Related document model` does
not inherit mail.thread then while the cron `_send_notifications_cron()`
is executed then the user will face error.

Steps to produce:
Steps to produce:
- Install `planning`.
- Settings > Technical > Scheduled Messages > Schedule a message and in Message`
create and edit` a new message.
- While creating new message, fill all the required info and and in `Related
Document Model` field enter
`planning.planning` as the model. (The main cause of error).
- Now manually run `Notification: Send scheduled message notifications`  cron

Our commit filters out model that does not inherit mail.thread

sentry-4538375913

--- a/addons/mail/i18n/mail.pot
+++ b/addons/mail/i18n/mail.pot
@@ -6989,6 +6989,13 @@ msgstr ""
 
 #. module: mail
 #. odoo-python
+#: code:addons/mail/models/mail_message_schedule.py:0
+#, python-format
+msgid "Only messages whose model inherits mail thread can be scheduled."
+msgstr ""
+
+#. module: mail
+#. odoo-python
 #: code:addons/mail/models/mail_render_mixin.py:0
 #: code:addons/mail/models/mail_render_mixin.py:0
 #: code:addons/mail/models/mail_render_mixin.py:0
